tests/NormalTests/paczka1/small_fuzzy/81977923.err
Error in line 5: X631c6KSWk S716 57,7
Error in line 8: itjvTYgj8 S716 16,0
